correct error message spacing on pdp

--- a/packages/scandipwa/src/component/ProductBundleOptions/ProductBundleOptions.style.scss
+++ b/packages/scandipwa/src/component/ProductBundleOptions/ProductBundleOptions.style.scss
@@ -47,7 +47,7 @@
     }
 
     &-Select.Field_hasError {
-        margin-block-end: 20px;
+        margin-block-end: 16px;
     }
 
     &-PriceLabel {
